--- a/Assignment_9.ipynb
+++ b/Assignment_9.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment 9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNm/P0IXJ1K1K6j7cVVBz6g",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPkAel9lbydnG7vqDDrOmw/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +55,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 604
+          "height": 595
         }
       },
       "source": [
@@ -343,7 +344,7 @@
         "outputId": "3c858540-2aad-4333-d092-efe3c237ce5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 33
         }
       },
       "source": [
@@ -380,7 +381,7 @@
         "outputId": "678856c7-afbb-458d-f2d2-86150c4440d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 358
+          "height": 352
         }
       },
       "source": [
@@ -398,6 +399,137 @@
         "print(std1)"
       ],
       "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The maximum values of each column are following:\n",
+            "sepal.length          7.9\n",
+            "sepal.width           4.4\n",
+            "petal.length          6.9\n",
+            "petal.width           2.5\n",
+            "variety         Virginica\n",
+            "dtype: object\n",
+            "The minimum values of each column are following:\n",
+            "sepal.length       4.3\n",
+            "sepal.width          2\n",
+            "petal.length         1\n",
+            "petal.width        0.1\n",
+            "variety         Setosa\n",
+            "dtype: object\n",
+            "The standard deviation values of each column are following:\n",
+            "sepal.length    0.83\n",
+            "sepal.width     0.44\n",
+            "petal.length    1.77\n",
+            "petal.width     0.76\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qeJ44vyKfsO5"
+      },
+      "source": [
+        "Ans3.using PyDrive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sMn5Bm64amOo"
+      },
+      "source": [
+        "!pip install -U -q PyDrive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p6Qrgp6Mao6x"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qs8BNWH-a7W_",
+        "outputId": "d734b698-5f25-4f5d-e745-6edddf94fbc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
+      },
+      "source": [
+        " id ='1z3KrQl4_KEX1FjoTSulErjf88RBraycG'\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1z3KrQl4_KEX1FjoTSulErjf88RBraycG\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LB9YLpJ5bPg-"
+      },
+      "source": [
+        "downloaded = drive.CreateFile({'id':id}) \n",
+        "downloaded.GetContentFile('iris.csv')  \n",
+        "df3 = pd.read_csv('iris.csv')\n"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XsselFdwc-8o",
+        "outputId": "b1abed3f-db70-4dd4-df8d-af0e303aa904",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 352
+        }
+      },
+      "source": [
+        "df3.head\n",
+        "pd.set_option(\"display.max.columns\", None)\n",
+        "pd.set_option(\"display.precision\", 2)\n",
+        "print(\"The maximum values of each column are following:\")\n",
+        "maximum=df3.max()\n",
+        "print(maximum)\n",
+        "print(\"The minimum values of each column are following:\")\n",
+        "minimum=df3.min()\n",
+        "print(minimum)\n",
+        "print(\"The standard deviation values of each column are following:\")\n",
+        "std1=df3.std()\n",
+        "print(std1)"
+      ],
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
